# RandomKravinyCoDelam-MensiVeci-

./: README.md
Calculator/: CMakeLists.txt  main.cpp
